--- a/openai_websocket_client.html
+++ b/openai_websocket_client.html
@@ -14,7 +14,7 @@
 
     <script>
       // NOTE: just grab this HTML file's full path and load in a browser,
-      // and run the "openai-websocket.py" in a separate terminal.
+      // and run the "openai_websocket.py" in a separate terminal.
       const HOST = "localhost"
       const PORT = "8765"
       const socket = new WebSocket(`ws://${HOST}:${PORT}/`)
